@@ -2,6 +2,8 @@
   o return the proper error code in some cases when failing to install some
     packages
   o kill unused DUDF support (mga#4493)
+  o downgrade from rpm-4.9 to 4.8 db when installing mga1 in a chroot from
+    mga2+ (mga#4590)
   o --test: do not display "More information on package"
   o --test: do not update /var/lib/rpm/installed-through-deps.list
 - fix $ARCH and $VERSION keyword substition in media url
